redirect output to log.txt, use overflow: hidden style to avoid stuff going out of popup box

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -5,6 +5,10 @@ body {
     cursor: default;
 }
 
+div {
+    overflow: hidden;
+}
+
 a {
     color: #000;
     text-decoration: none;
